refac: migrate to Vue
Start code migration to Vue3 with Typescript support. Still needs some refac to type usages.

--- a/index.html
+++ b/index.html
@@ -1,173 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Checkers</title>
-  <style>
-    :root {
-      --cell-size-px: 36px;
-      --white0: rgb(220, 220, 220);
-      --black0: rgb(50, 50, 50);
-      --white1: rgb(180, 180, 180);
-      --black1: rgb(100, 100, 100);
-    }
-    .board-table, .board-cell, .board-row {
-      border: 0;
-      padding: 0;
-      margin: 0;
-    }
-    .board-cell {
-      width: var(--cell-size-px);
-      height: var(--cell-size-px);
-      max-width: var(--cell-size-px);
-      max-height: var(--cell-size-px);
-      position: relative;
-    }
-    .cell-text {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-50%);
-      color: white;
-      text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-      opacity: 0.07;
-      font-family: monospace;
-      font-size: 13px;
-    }
-    .cell-text:hover {
-      cursor: default;
-      opacity: 0.8;
-    }
-    .board-cell.black {
-      background-color: var(--black0);
-    }
-    .board-cell.white {
-      background-color: var(--white0);
-    }
-
-    .piece {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-    }
-
-    .piece.man {
-      transform: translateY(-50%) translateX(-50%);
-      width: calc(3/4 * var(--cell-size-px));
-      height: calc(3/4 * var(--cell-size-px));
-      border-radius: 100%;
-    }
-
-    .piece.king {
-      transform: translateY(-50%) translateX(-50%) rotate(45deg);
-      width: calc(1/2 * var(--cell-size-px));
-      height: calc(1/2 * var(--cell-size-px));
-    }
-
-    .piece.white {
-      background-color: var(--white0);
-      border: 2px solid var(--black1);
-    }
-    .piece.black {
-      background-color: var(--black0);
-      border: 2px solid var(--white1);
-    }
-  </style>
-</head>
-<body>
-
-<table id="board-table"></table>
-
-<textarea id="log" style="width: 500px; height: 200px;"></textarea>
-<input type="text" id="prompt"/>
-<button id="btn" type="button">Choose</button>
-
-<script type="module">
-
-import * as s from './game-state.js'
-import * as bo from './board.js'
-import * as gfx from './board-render.js'
-import * as mov from './move-generation.js'
-import * as mm from './minimax.js'
-
-// First player = white = human
-
-const state = s.makeInitialState()
-
-let humanMovementChoices = []
-
-const depth = 7
-const minimax = new mm.Minimax(false, mm.heuristicCountPieces, depth)
-
-const elemMatrix = gfx.createBoardTable(
-  document.querySelector('#board-table')
-)
-gfx.renderBoard(state.board, elemMatrix)
-
-const log    = document.querySelector('#log')
-const prompt = document.querySelector('#prompt')
-const btn    = document.querySelector('#btn')
-
-function generateAndLogCurrentMoves() {
-  humanMovementChoices = s.getActions(state)
-
-  let movString = 'Current moves ('+(state.whiteToMove ? 'white' : 'black')+')\n'
-  for (let i=0; i<humanMovementChoices.length; i++) {
-    const mov = humanMovementChoices[i]
-    movString += '' + i + ') ' + ([mov.from, ...mov.sequence].map(bo.positionString).join(', ') + '.\n')
-  }
-  log.innerHTML += movString
-  log.innerHTML += 'Enter your choice\n'
-  log.scrollTop = log.scrollHeight
-}
-
-generateAndLogCurrentMoves()
-
-const fmt = Intl.NumberFormat('pt')
-
-btn.addEventListener('click', () => {
-  const choice = prompt.value
-  if (choice < 0 || choice >= humanMovementChoices.length) {
-    log.innerHTML += 'Invalid choice\n'
-    return
-  }
-
-  const moveTaken = humanMovementChoices[choice]
-  s.actionDo(state, moveTaken)
-  gfx.renderBoard(state.board, elemMatrix)
-
-  const whiteWins = s.getWinner(state)
-  if (whiteWins !== null) {
-    log.innerHTML += (whiteWins ? 'White' : 'Black') + ' wins!';
-    btn.setAttribute('disabled', 'disabled')
-  }
-
-  btn.setAttribute('disabled', 'disabled')
-  setTimeout(() => {
-
-    minimax.resetLeafCount()
-    const { action: aiAction } = minimax.val(state)
-    console.log('leafCount', fmt.format(minimax.getLeafCount()))
-
-    s.actionDo(state, aiAction)
-    gfx.renderBoard(state.board, elemMatrix)
-
-    const whiteWins = s.getWinner(state)
-    if (whiteWins !== null) {
-      log.innerHTML += (whiteWins ? 'White' : 'Black') + ' wins!';
-      btn.setAttribute('disabled', 'disabled')
-    } else {
-      generateAndLogCurrentMoves()
-      btn.removeAttribute('disabled')
-    }
-  }, 50)
-})
-
-</script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
