crude ai vs ai interface, plus found a bug to fix (cf FIXME)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <script type="module">
 
+// TODO test with mm.Minimax(true, ...) just to make sure
+
 import * as s from './game-state.js'
 import * as bo from './board.js'
 import * as gfx from './board-render.js'
